example/secondfile/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>CaaS</fullName>
                </value>
                <value>
                    <fullName>StaaS</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>IPFlex</fullName>
                </value>
                <value>
                    <fullName>Ethernet (Opt-E-Man)</fullName>
                </value>
                <value>
                    <fullName>Mobility DR</fullName>
                </value>
                <value>
                    <fullName>IPDSL</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Connect</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>Mobility CRU</fullName>
                </value>
                <value>
                    <fullName>Mobile Toggle</fullName>
                </value>
                <value>
                    <fullName>Mobile Device Management</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Deal_Reg__c</fullName>
        <defaultValue>&quot;True&quot;</defaultValue>
        <label>Promo Deal Reg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <description>This is used to display proposal id and display in email template.</description>
        <label>Quote ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_State__c</fullName>
        <defaultValue>&apos;Success&apos;</defaultValue>
        <label>Quote State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDS Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_Completion_Date__c</fullName>
        <description>Service Delivery Project Tracking Field</description>
        <label>RDS Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RDS_Deal_Hash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Deal Hash</label>
        <referenceTo>Deal_Hash__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Excel_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDS Excel Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_Excel_failure_reason__c</fullName>
        <description>RDS Excel failure reason</description>
        <label>RDS Excel failure reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RDS_Excel_status__c</fullName>
        <description>RDS Excel status</description>
        <label>RDS Excel status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDS_Percent_Complete__c</fullName>
        <label>RDS Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RDS_Received_Last_Time_Stamp__c</fullName>
        <label>RDS Received Last Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDS_Received_Status__c</fullName>
        <label>RDS Received Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Review_Complete_Last_Time_Stamp__c</fullName>
        <label>RDS Review Complete Last Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDS_Review_Complete_Status__c</fullName>
        <label>RDS Review Complete Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>RDS Version</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Effective_Date__c</fullName>
        <label>Rate Card Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Date__c</fullName>
        <label>Rate Stability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ready_for_RDS_Excel__c</fullName>
        <label>Ready for RDS Excel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realted_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Related Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_for_Internal_use__c</fullName>
        <formula>$RecordType.Name</formula>
        <label>Record Type Name for Internal use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_special_pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove special pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Contract_Subscription_Error_Msg__c</fullName>
        <label>SA Contract Subscription Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Contract_Subscription_Last_Time_Stamp__c</fullName>
        <label>SA Contract Subscription Last Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SA_Contract_Subscription_Status__c</fullName>
        <label>SA Contract Subscription Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOC_Access__c</fullName>
        <label>SOC (Access)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOR_to_Provisioning__c</fullName>
        <label>SOR to Provisioning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Delivery Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_type__c</fullName>
        <label>Service type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_EC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared EC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Excel_Creation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Excel Creation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Pricing Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Pricing Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Pricing Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Discount_Percentage__c</fullName>
        <label>Standard Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wholesale_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wholesale Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBIDMigrationCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBIDMigrationCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealSubmitCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDealSubmitCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRetriggerMACDPricingAssgnmnt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when RetriggerMACDPricingAssgnmnt button is clicked.</description>
        <label>isRetriggerMACDPricingAssgnmnt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSPConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSPConfirmed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>